# MoodBoard

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/include/: LevelMeter.h  MainComponent.h  PluginWindow.h  Settings.h
app/source/: Main.cpp  MainComponent.cpp  Settings.cpp
cmake/: cpm.cmake
