cmake_minimum_required(VERSION 4.1.2)

project(MoodBoard)

set(CMAKE_CXX_STANDARD 23)

set(LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs)
include(cmake/cpm.cmake)

CPMAddPackage(
    NAME JUCE
    GITHUB_REPOSITORY juce-framework/JUCE
    GIT_TAG develop
    #GIT_TAG 8.0.10
    #VERSION 8.0.10
    SOURCE_DIR ${LIB_DIR}/juce
)

add_subdirectory(app)
